tests/ok/attribute-export-symbols.ari
@export("ari_public_add")
pub fn add(left: i64, right: i64) -> i64 {
  return left + right;
}

@no_mangle
pub fn increment(value: i64) -> i64 {
  return value + 1;
}

@export
pub fn reset() -> i64 {
  return 0;
}

pub fn call_exports() -> i64 {
  return add(2, 3) + increment(4) + reset();
}
